# codal-ble-nano

./: CMakeLists.txt  target-locked.json  target.json
inc/: ZSingleWireSerial.h  device_pinmap.h
ld/: nrf52832-no-sd.ld  nrf52832.ld
model/: BLENano.cpp  BLENano.h  BLENanoIO.cpp  BLENanoIO.h
samples/: main.cpp
source/: ZSingleWireSerial.cpp  codal_target_hal.cpp
